<resources>
    <string name="app_name">Colors</string>
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="Alpha">Alpha</string>
    <string name="Transparent">Transparent</string>
    <string name="Semitransparent">Semitransparent</string>
    <string name="Black">Black</string>
    <string name="White">White</string>
    <string name="Opaque">Opaque</string>
    <string name="Cyan">Cyan</string>
    <string name="Magenta">Magenta</string>
    <string name="Yellow">Yellow</string>
    <string name="AboutOf">AboutOf</string>
    <string name="val_ini">(128)</string>
    <string name="val_ex">#80808080</string>
    <string name="programa">Program:</string>
    <string name="Docente">Teacher:</string>
    <string name="Codigo">Code:</string>
    <string name="Alumno">Student:</string>
</resources>
