<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sime.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/padding_general1">

        <TextView
            android:id="@+id/lbl_val_exa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:textAlignment="center"
            android:textColor="@color/icons"
            android:background="@color/secondary_text"
            android:layout_gravity="center_vertical"
            android:textSize="24dp"
            android:text="@string/val_ex" />

        <!-- Red -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/lblRed"
                style="@style/label"
                android:text="@string/Red" />

            <SeekBar
                android:id="@+id/sbrRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:max="255"
                android:progress="128"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lbl_val_red"
                style="@style/label"
                android:text="@string/val_ini" />
        </LinearLayout>

        <!-- Green -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/lblGreen"
                style="@style/label"
                android:text="@string/Green" />

            <SeekBar
                android:id="@+id/sbrGreen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:max="255"
                android:progress="128"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lbl_val_green"
                style="@style/label"
                android:text="@string/val_ini" />
        </LinearLayout>

        <!-- Blue -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/lblBlue"
                style="@style/label"
                android:text="@string/Blue" />

            <SeekBar
                android:id="@+id/sbrBlue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:max="255"
                android:progress="128"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lbl_val_blue"
                style="@style/label"
                android:text="@string/val_ini" />
        </LinearLayout>

        <!-- Alpha -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/lblAlpha"
                style="@style/label"
                android:text="@string/Alpha" />

            <SeekBar
                android:id="@+id/sbrAlpha"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:max="255"
                android:progress="128"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lbl_val_alpha"
                style="@style/label"
                android:text="@string/val_ini" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_general1">

            <View
                android:id="@+id/vieColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80808080" />
        </FrameLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
