<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sime.demo.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_general1">

        <TextView
            android:id="@+id/programa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_3"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:text="programa"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/asignatura"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_3"
            android:textAlignment="center"
            android:text="asignatura"
            android:textColor="@color/primary_text"
            android:layout_gravity="top"/>

        <Space
            android:layout_width="352dp"
            android:layout_height="34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1">
            <TextView
                android:layout_width="@dimen/width_lbl_2"
                android:layout_height="match_parent"
                android:text="@string/Docente"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/docente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1">
            <TextView
                android:layout_width="@dimen/width_lbl_2"
                android:layout_height="match_parent"
                android:text="@string/Alumno"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/alumno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1">
            <TextView
                android:layout_width="@dimen/width_lbl_2"
                android:layout_height="match_parent"
                android:text="@string/Codigo"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/codigo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
